--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_7" orientation="landscape" appearance="light"/>
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -15,16 +15,16 @@
         </array>
     </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--Selection Image Class-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Projet_4_Instagrid" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="SelectionImageClass" customModule="Projet_4_Instagrid" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="926" height="428"/>
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Instagrid" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LLg-n7-Oyg">
-                                <rect key="frame" x="405.66666666666669" y="10" width="114.66666666666669" height="37.666666666666664"/>
+                                <rect key="frame" x="156.66666666666666" y="74" width="114.66666666666666" height="37.666666666666657"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="37.670000000000002" id="4lU-Qg-NOh">
                                         <variation key="heightClass=regular-widthClass=regular" constant="75"/>
@@ -44,10 +44,10 @@
                                 </variation>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="13" translatesAutoresizingMaskIntoConstraints="NO" id="cGU-8t-wTQ" userLabel="Swipe Up Stack View">
-                                <rect key="frame" x="64" y="199" width="187" height="20"/>
+                                <rect key="frame" x="137" y="236.99999999999997" width="154" height="60.666666666666657"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" verticalCompressionResistancePriority="749" image="Arrow Up" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5mO-36-a6i">
-                                        <rect key="frame" x="0.0" y="0.0" width="20" height="20"/>
+                                        <rect key="frame" x="67" y="0.0" width="20" height="20"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="20" id="BUS-6p-t9v">
                                                 <variation key="heightClass=regular-widthClass=regular" constant="40"/>
@@ -65,7 +65,7 @@
                                         </variation>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe up to share" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HXz-Oo-wQY">
-                                        <rect key="frame" x="33" y="0.0" width="154" height="20"/>
+                                        <rect key="frame" x="0.0" y="33" width="154" height="27.666666666666671"/>
                                         <fontDescription key="fontDescription" name="Delm-Medium" family="Delm" pointSize="25"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -78,7 +78,7 @@
                                 <variation key="heightClass=compact" alignment="fill" axis="horizontal"/>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="uzx-U8-f4P" userLabel="Picture Stack View">
-                                <rect key="frame" x="313" y="53.666666666666657" width="300" height="300"/>
+                                <rect key="frame" x="64" y="318" width="300" height="300"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="A1U-fF-QiS">
                                         <rect key="frame" x="10" y="10" width="280" height="135"/>
@@ -123,7 +123,7 @@
                                 <directionalEdgeInsets key="directionalLayoutMargins" top="10" leading="10" bottom="10" trailing="10"/>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="8Zu-4N-5ec" userLabel="Layout Stack View">
-                                <rect key="frame" x="733" y="83" width="70" height="270"/>
+                                <rect key="frame" x="79" y="768" width="270" height="70"/>
                                 <subviews>
                                     <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aUz-mz-jO9">
                                         <rect key="frame" x="0.0" y="0.0" width="70" height="70"/>
@@ -135,9 +135,12 @@
                                         <buttonConfiguration key="configuration" style="plain">
                                             <backgroundConfiguration key="background" image="Layout 1"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="LayoutButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="djL-dj-wfX"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FNz-OM-8eK">
-                                        <rect key="frame" x="0.0" y="100" width="70" height="70"/>
+                                        <rect key="frame" x="100" y="0.0" width="70" height="70"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="FNz-OM-8eK" secondAttribute="height" multiplier="1:1" id="m02-LF-ujj"/>
                                         </constraints>
@@ -145,9 +148,12 @@
                                         <buttonConfiguration key="configuration" style="plain">
                                             <backgroundConfiguration key="background" image="Layout 2"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="LayoutButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wed-Df-4Mr"/>
+                                        </connections>
                                     </button>
-                                    <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vb0-lN-ygF">
-                                        <rect key="frame" x="0.0" y="200" width="70" height="70"/>
+                                    <button opaque="NO" tag="3" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vb0-lN-ygF">
+                                        <rect key="frame" x="200" y="0.0" width="70" height="70"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="Vb0-lN-ygF" secondAttribute="height" multiplier="1:1" id="tMV-Aa-Uf1"/>
                                         </constraints>
@@ -155,6 +161,9 @@
                                         <buttonConfiguration key="configuration" style="plain">
                                             <backgroundConfiguration key="background" image="Layout 3"/>
                                         </buttonConfiguration>
+                                        <connections>
+                                            <action selector="LayoutButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BP3-Lx-t6I"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <variation key="heightClass=compact" alignment="center" axis="vertical"/>
@@ -179,21 +188,21 @@
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="9sZ-sk-dkU"/>
-                                <exclude reference="T66-I2-fiD"/>
-                                <exclude reference="x4J-7v-aCX"/>
                                 <exclude reference="V6Y-9L-fON"/>
                                 <exclude reference="deH-Tl-clc"/>
                                 <exclude reference="io1-eN-sZ9"/>
                                 <exclude reference="knP-GZ-fNm"/>
+                                <exclude reference="9sZ-sk-dkU"/>
+                                <exclude reference="T66-I2-fiD"/>
+                                <exclude reference="x4J-7v-aCX"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=compact">
                             <mask key="constraints">
                                 <include reference="fZT-5q-1TK"/>
-                                <include reference="9sZ-sk-dkU"/>
                                 <include reference="deH-Tl-clc"/>
                                 <include reference="io1-eN-sZ9"/>
+                                <include reference="9sZ-sk-dkU"/>
                                 <exclude reference="KIs-Hm-VKB"/>
                             </mask>
                         </variation>
@@ -209,13 +218,18 @@
                             </mask>
                             <mask key="constraints">
                                 <include reference="PiN-PW-gIC"/>
-                                <include reference="T66-I2-fiD"/>
-                                <include reference="x4J-7v-aCX"/>
                                 <include reference="V6Y-9L-fON"/>
                                 <include reference="knP-GZ-fNm"/>
+                                <include reference="T66-I2-fiD"/>
+                                <include reference="x4J-7v-aCX"/>
                             </mask>
                         </variation>
                     </view>
+                    <connections>
+                        <outletCollection property="layoutButton" destination="aUz-mz-jO9" collectionClass="NSMutableArray" id="w4T-r4-LPa"/>
+                        <outletCollection property="layoutButton" destination="FNz-OM-8eK" collectionClass="NSMutableArray" id="0Fh-uF-WeW"/>
+                        <outletCollection property="layoutButton" destination="Vb0-lN-ygF" collectionClass="NSMutableArray" id="mEd-iw-33a"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
